upload file html all slide

--- a/exercises/lab2/PNMP.ipynb
+++ b/exercises/lab2/PNMP.ipynb
@@ -13,7 +13,7 @@
    "id": "3f6e6671",
    "metadata": {},
    "source": [
-    "### Biến"
+    "### 1. Biến"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "id": "930031fa",
    "metadata": {},
    "source": [
-    "### Dữ liệu kiểu chuỗi"
+    "### 2. Dữ liệu kiểu chuỗi"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "id": "94cfe291",
    "metadata": {},
    "source": [
-    "### Nhập và Xuất dữ liệu\n",
+    "### 3. Nhập và Xuất dữ liệu\n",
     "\n",
     ">Sử dụng hàm print để in dữ liệu ra màn hình"
    ]
@@ -204,7 +204,7 @@
    "id": "66dc4e32",
    "metadata": {},
    "source": [
-    "### Giải phương trình bậc 2 "
+    "### 4. Giải phương trình bậc 2 "
    ]
   },
   {
@@ -280,7 +280,7 @@
    "id": "c25ec7fb",
    "metadata": {},
    "source": [
-    "### Kiểu dữ liệu & phép toán liên quan"
+    "### 5. Kiểu dữ liệu & phép toán liên quan"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "id": "2b0dbd88",
    "metadata": {},
    "source": [
-    "#### Kiểu số\n",
+    "#### 5.1. Kiểu số\n",
     "\n",
     ">❖Python viết số nguyên theo nhiều hệ cơ số"
    ]
@@ -380,7 +380,7 @@
    "id": "50961f6c",
    "metadata": {},
    "source": [
-    "#### Phép toán"
+    "#### 5.2. Phép toán"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "id": "9d1271b1",
    "metadata": {},
    "source": [
-    "### Cấu trúc rẽ nhánh "
+    "### 6. Cấu trúc rẽ nhánh "
    ]
   },
   {
@@ -474,7 +474,7 @@
    "id": "0e83fec5",
    "metadata": {},
    "source": [
-    "### Vòng lặp"
+    "### 7. Vòng lặp"
    ]
   },
   {
@@ -482,7 +482,7 @@
    "id": "8ca78fdc",
    "metadata": {},
    "source": [
-    "#### Vòng lặp While\n",
+    "#### 7.1. Vòng lặp While\n",
     "- Lặp while trong python tương đối giống trong các ngôn ngữ khác\n",
     "- Trong khối lệnh while (lệnh lặp nói chung) có thể dùng **continue** hoặc **break** để về đầu hoặc cuối khối lệnh\n",
     "- Khối **“else”** sẽ được thực hiện sau khi toàn bộ vòng lặp đã chạy xong\n",
@@ -494,7 +494,7 @@
    "id": "1bc4008c",
    "metadata": {},
    "source": [
-    "#### Vòng lặp For\n",
+    "#### 7.2. Vòng lặp For\n",
     "- Vòng lặp for sử dụng để duyệt danh sách, khối else làm việc tương tự như ở vòng lặp while\n",
     "- Dùng hàm **range(a, b)** để tạo danh sách gồm các số từ a đến b-1, hoặc tổng quát hơn là **range(a, b, c)** trong đó c là bước nhảy"
    ]
@@ -537,7 +537,7 @@
    "id": "3a136feb",
    "metadata": {},
    "source": [
-    "### Hàm"
+    "### 8. Hàm"
    ]
   },
   {
@@ -611,7 +611,7 @@
    "id": "b8a67e5d",
    "metadata": {},
    "source": [
-    "### Chuỗi và danh sách "
+    "### 9. Chuỗi và danh sách "
    ]
   },
   {
@@ -619,7 +619,7 @@
    "id": "82c52098",
    "metadata": {},
    "source": [
-    "#### Chuỗi "
+    "#### 9.1. Chuỗi "
    ]
   },
   {
@@ -1192,7 +1192,7 @@
    "id": "e756638b",
    "metadata": {},
    "source": [
-    "### List "
+    "#### 9.2. List "
    ]
   },
   {
@@ -1357,7 +1357,7 @@
    "id": "38a40206",
    "metadata": {},
    "source": [
-    "### Tuple"
+    "#### 9.3. Tuple"
    ]
   },
   {
@@ -1416,7 +1416,7 @@
    "id": "65db8e70",
    "metadata": {},
    "source": [
-    "### Range (Miền)"
+    "#### 9.4. Range (Miền)"
    ]
   },
   {
@@ -1442,7 +1442,7 @@
    "id": "59908eeb",
    "metadata": {},
    "source": [
-    "### Tập hợp"
+    "### 10. Tập hợp"
    ]
   },
   {
@@ -1450,7 +1450,7 @@
    "id": "5b2c5786",
    "metadata": {},
    "source": [
-    "#### Set(Tập hợp) và Frozenset(Tập hợp tĩnh)"
+    "#### 10.1. Set(Tập hợp) và Frozenset(Tập hợp tĩnh)"
    ]
   },
   {
@@ -1802,7 +1802,7 @@
    "id": "49dda2ff",
    "metadata": {},
    "source": [
-    "### Dictionary (từ điển)"
+    "### 11. Dictionary (từ điển)"
    ]
   },
   {
@@ -2095,7 +2095,7 @@
    "id": "1199dfc9",
    "metadata": {},
    "source": [
-    "### Module và Package"
+    "### 12. Module và Package"
    ]
   },
   {
@@ -2103,7 +2103,7 @@
    "id": "5bca8d4c",
    "metadata": {},
    "source": [
-    "#### Module\n",
+    "#### 12.1. Module\n",
     "- Một file mã nguồn trong python được xem là một module\n",
     "    - Có phần mở rộng .py\n",
     "    - Mọi hàm, biến, kiểu trong file là các thành phần của module\n",
@@ -2120,7 +2120,7 @@
    "id": "a53ef300",
    "metadata": {},
    "source": [
-    "#### Package\n",
+    "#### 12.2. Package\n",
     "\n",
     "> Package = Thư mục các module (lưu trữ vật lý)"
    ]
@@ -2166,7 +2166,7 @@
    "id": "d442850d",
    "metadata": {},
    "source": [
-    "### Khát quát về NumPy\n"
+    "### 13. Khát quát về NumPy\n"
    ]
   },
   {
@@ -2354,7 +2354,7 @@
    "id": "f9c54125",
    "metadata": {},
    "source": [
-    "### Các phép toán trên mảng"
+    "### 14. Các phép toán trên mảng"
    ]
   },
   {
@@ -2487,7 +2487,7 @@
    "id": "55c90a72",
    "metadata": {},
    "source": [
-    "### Một số thao tác thông dụng"
+    "### 15. Một số thao tác thông dụng"
    ]
   },
   {
@@ -3030,7 +3030,7 @@
    "id": "8b780a55",
    "metadata": {},
    "source": [
-    "### Thư viện matplotlib"
+    "### 16. Thư viện matplotlib"
    ]
   },
   {
@@ -3598,7 +3598,7 @@
    "id": "0df7bed5",
    "metadata": {},
    "source": [
-    "### Thư viện Panda"
+    "### 17. Thư viện Panda"
    ]
   },
   {
@@ -3606,7 +3606,7 @@
    "id": "03e6875f",
    "metadata": {},
    "source": [
-    "#### Làm việc với series"
+    "#### 17.1. Làm việc với series"
    ]
   },
   {
@@ -3845,7 +3845,7 @@
    "id": "78be9290",
    "metadata": {},
    "source": [
-    "#### Làm việc với dataframe"
+    "#### 17.2. Làm việc với dataframe"
    ]
   },
   {
@@ -4001,7 +4001,7 @@
    "id": "bac0a5cd",
    "metadata": {},
    "source": [
-    "### Kết hợp giữa pandas và matplotlib"
+    "### 18. Kết hợp giữa pandas và matplotlib"
    ]
   },
   {
@@ -4096,7 +4096,7 @@
    "id": "19c59b1f",
    "metadata": {},
    "source": [
-    "### Làm việc với panel"
+    "### 19. Làm việc với panel"
    ]
   },
   {
@@ -4151,7 +4151,7 @@
    "id": "7fe3c40d",
    "metadata": {},
    "source": [
-    "### Chọn và nhóm phần tử"
+    "### 20. Chọn và nhóm phần tử"
    ]
   },
   {
@@ -4437,7 +4437,7 @@
    "id": "2026baa3",
    "metadata": {},
    "source": [
-    "### Sử dụng pandas trong bài toán thực tế"
+    "### 21. Sử dụng pandas trong bài toán thực tế"
    ]
   },
   {
@@ -4676,7 +4676,7 @@
    "id": "c651b1c6",
    "metadata": {},
    "source": [
-    "### Thư viện scikit-learn"
+    "### 22. Thư viện scikit-learn"
    ]
   },
   {
@@ -4684,7 +4684,7 @@
    "id": "f7d97be0",
    "metadata": {},
    "source": [
-    "#### Một số loại bài toán học máy"
+    "#### 22.1. Một số loại bài toán học máy"
    ]
   },
   {
@@ -4708,7 +4708,7 @@
    "id": "ed44b42b",
    "metadata": {},
    "source": [
-    "#### Dự báo sử dụng hồi quy tuyến tính"
+    "#### 22.2. Dự báo sử dụng hồi quy tuyến tính"
    ]
   },
   {
@@ -4965,7 +4965,7 @@
      "text": [
       "[NbConvertApp] Converting notebook PNMP.ipynb to html\n",
       "[NbConvertApp] WARNING | Alternative text is missing on 17 image(s).\n",
-      "[NbConvertApp] Writing 1153370 bytes to PNMP.html\n"
+      "[NbConvertApp] Writing 1154392 bytes to PNMP.html\n"
      ]
     }
    ],
