complete 3 slide and 2 ex 3 4

--- a/exercises/lab2/04_exercise_02.ipynb
+++ b/exercises/lab2/04_exercise_02.ipynb
@@ -855,6 +855,26 @@
     "print(\"epsilon(n=1000000): \", calc_pi_monte_carlo(n = 1000000) - math.pi)\n",
     "print(\"epsilon(n=1000000): \", calc_pi_monte_carlo(n = 1000000) - math.pi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "84bd87cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook 04_exercise_02.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 4 image(s).\n",
+      "[NbConvertApp] Writing 418298 bytes to 04_exercise_02.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"04_exercise_02.ipynb\""
+   ]
   }
  ],
  "metadata": {
