--- a/exercises/lab2/03_exercise_01.ipynb
+++ b/exercises/lab2/03_exercise_01.ipynb
@@ -871,6 +871,25 @@
    "source": [
     "# Kết thúc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1591f14e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook 03_exercise_01.ipynb to html\n",
+      "[NbConvertApp] Writing 353429 bytes to 03_exercise_01.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html \"03_exercise_01.ipynb\""
+   ]
   }
  ],
  "metadata": {
